# llvm-curvefit

./: .gitignore  CMakeLists.txt  README.md  README.rst  config.h.in
BasicBlockTime/: getbbtime.c  getbbtime.cpp
MemoryAnalysisCode/: AVLnonrecu.cpp  AVLrecursion.cpp  CurveFit.cpp  ScalModel.cpp  fitpapi.cpp  getcache.c  info  info2  mrd10.10.10  mrd10.10.11  mrd10.10.12  mrd10.10.13  mrd10.10.14  mrd10.10.15  mrd10.10.16  mrd10.10.17  mrd10.10.18  mrd10.10.19  mrd10.10.20  mrd10.10.21  mrd10.10.22  mrd10.10.23  mrd10.10.24  mrd10.10.25  mrd10.10.26  mrd10.10.27  mrd10.10.28  mrd10.10.29  mrd10.10.30  nouse.nb  reuse2.nb  run.sh  split.cpp  testthealgo.cpp
data/120x80/: 192.out  264.out  384.out  48.out  480.out  576.out  672.out  768.out  96.out  cgpop.bc.llvm.120x80
data/180x120/: 120.out  180.out  24.out  36.out  360.out  48.out  96.out  cgpop.bc.llvm.180x120
data/60x40/: 1416.out  360.out  576.out  708.out  948.out  cgpop.bc.llvm.60x40
doc/: curver_fitting.nb  reuse.nb
scripts/: changcfg.cpp  compilmaintemplate.sh  finalchange.ll  getbbtime.sh  getcachehit.sh  getcacheperf.sh  reversefunc.cpp  testbench.ll
scripts/compileCGPOP/: combinefiles.sh  instruc
scripts/compileLassen/: Makefile
scripts/compileNPB3.3/: combinefiles.sh  compilebc.sh  make.common  make.def
src/: BBCount.cpp  BBTime.cpp  BasicBlockTime.cpp  CMakeLists.txt  ConstructMiniBench.cpp  CurveFit.cpp  ReuseDistance.cpp  backup.cpp  construct.cpp  test.cpp
